8235355: Shenandoah: Resolve deadlock between OOM handler and nmethod lock

Reviewed-by: zgu